--- a/js01_sample/janken.html
+++ b/js01_sample/janken.html
@@ -15,7 +15,7 @@
 
   <main>
     <ul>
-      <li id="gu_btn">グー</li>
+      <li id="gu_btn"><img src="../IMG_5787.PNG" alt=""></li>
       <li id="cho_btn">チョキ</li>
       <li id="par_btn">パー</li>
     </ul>
